# Snake

mlv-2.0.2/: AUTHORS  Android.mk.in  ChangeLog  INSTALL  MLV.pc.in  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  mlv_rcs_revision
mlv-2.0.2/MLV/: Makefile.am  Makefile.in  SDLMain.h  SDLMain.m  animation.c  audio.c  color.c  config.h.in  data_structure.h  event.c  image.c  image.h  informations.c  input_box.c  input_box.h  input_box_wait.c  key.c  key.h  keyboard.c  list.c  list.h  mathematics.c  mathematics.h  memory_debug.c  memory_debug.h  memory_management.h  mouse.c  path.c  platform.h  playlist.c  random.c  sdlkeyboardtochar.c  sdlkeyboardtochar.h  shapes.c  text.c  text.h  time.c  tree_map.c  tree_map.h  tree_set.c  (+4 more)
mlv-2.0.2/config/am/: aminclude.am
mlv-2.0.2/config/m4/: ax_prog_doxygen.m4
mlv-2.0.2/data/: Makefile.am  Makefile.in
mlv-2.0.2/data/font/: Makefile.am  Makefile.in
mlv-2.0.2/doc/: Doxyfile  Doxyfooter.in  Doxyheader_English.in  Doxyheader_French.in  Doxyheader_Spanish.in  Makefile.am  Makefile.in  index.html.in  main_documentation_doxygen.c.in  tp5graph.tex.in
mlv-2.0.2/examples/: Makefile.am  Makefile.in
mlv-2.0.2/examples/advanced/: 01_texts_and_boxes.c  02_font.c  04_sound.c  05_playlist.c  06_image.c  07_transparency.c  08_zone_click.c  09_animation.c  11_animation_book.c  COPYRIGHT  Makefile.am  Makefile.in
mlv-2.0.2/examples/beginner/: 01_hello_world.c  02_shapes.c  04_texts_and_boxes.c  05_mouse.c  06_keyboard.c  07_input_box.c  08_mouse_keyboard_timer.c  09_colors.c  10_library_informations.c  Makefile.am  Makefile.in  a.out  makefile-examples  mozzanil_TP1.tgz
mlv-2.0.2/examples/beginner/mozzanil_TP1/: TP1.c  a.out  makefile
mlv-2.0.2/examples/beginner/mozzanil_TP2/: matrice.c  programme1.c  programme2.c
mlv-2.0.2/examples/beginner/mozzanil_TP2/snake2022/: .game.c.swp  game.c  game2.C  grid.c  grid.h  makefile
mlv-2.0.2/examples/medium/: 01_keyboard_events.c  02_mouse_events.c  03_input_box_events.c  04_events.c  05_exit.c  06_colors.c  07_time.c  08_full_screen.c  09_keyboard_accents.c  10_mouse_or_keyboard_access.c  11_keys_codes.c  12_desktop_size.c  Makefile.am  Makefile.in
mlv-2.0.2/examples/sandbox/: Makefile.in  README  example.c.in
mlv-2.0.2/packaging/: Makefile.am  Makefile.in
mlv-2.0.2/packaging/debian/: script_pkg.in
mlv-2.0.2/packaging/debian/debian/: Makefile.am  Makefile.in  changelog.in  control.in  copyright.in  libmlv-dev.install  libmlv.install  libmlv.shlibs.in  libmlv.symbols.in  rules
mlv-2.0.2/packaging/fedora/: creer_paquet_rpm
mlv-2.0.2/packaging/fedora/rpmbuild/SPECS/: mlv.spec.in
mlv-2.0.2/packaging/windows/: Makefile.am  Makefile.in  README  create_canonical_developpement_kit.in  create_code_blocks_package.in  create_dev_cpp_package.in  create_win32_binaries.in  my_project.cbp.in  my_project.dev.in
mlv-2.0.2/packaging/windows/cross-compilation/: definition_of_environement_variables.in  mingw_compilation_for_mlv.in
