#
#   This file is part of the MLV Library.
#
#   Copyright (C) 2010 Adrien Boussicault, Marc Zipstein
#
#
#    This library is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    This library is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this Library.  If not, see <http://www.gnu.org/licenses/>.
#

EXTRA_DIST= cross-compilation/cross-compilation-x86.tar.xz \
	README

clean-local:
	- rm -rf cross-compilation/fakeroot-mingw32
	- rm -rf mlv-[0-9]*.[0-9]*-canonical-developpement-kit
	- rm -rf mlv-[0-9]*.[0-9]*-code_blocks
	- rm -rf mlv-[0-9]*.[0-9]*-dev-cpp
	- rm -rf mlv-[0-9]*.[0-9]*-win32

